--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #cacaca;
 }
 #gameContainer {
-    position: relative; 
+    position: relative;
 }
 #gameCanvas {
     border: 2px solid black;
@@ -29,14 +29,30 @@ body {
     border-radius: 10px;
     text-align: center;
 }
-#startButton{
+#startButton {
     background: #418d3a;
     border-radius: 999px;
     box-shadow: #418d3a 0 10px 20px -10px;
     box-sizing: border-box;
-    color: #FFFFFF;
+    color: #ffffff;
     cursor: pointer;
-    font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+    font-family:
+        Inter,
+        Helvetica,
+        'Apple Color Emoji',
+        'Segoe UI Emoji',
+        NotoColorEmoji,
+        'Noto Color Emoji',
+        'Segoe UI Symbol',
+        'Android Emoji',
+        EmojiSymbols,
+        -apple-system,
+        system-ui,
+        'Segoe UI',
+        Roboto,
+        'Helvetica Neue',
+        'Noto Sans',
+        sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
@@ -62,14 +78,41 @@ body {
     border-radius: 10px;
     text-align: center;
 }
-#restartButton{
+#gameOverImageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#gameOverImage {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    padding-bottom: 5%;
+}
+#restartButton {
     background: #418d3a;
     border-radius: 999px;
     box-shadow: #418d3a 0 10px 20px -10px;
     box-sizing: border-box;
-    color: #FFFFFF;
+    color: #ffffff;
     cursor: pointer;
-    font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+    font-family:
+        Inter,
+        Helvetica,
+        'Apple Color Emoji',
+        'Segoe UI Emoji',
+        NotoColorEmoji,
+        'Noto Color Emoji',
+        'Segoe UI Symbol',
+        'Android Emoji',
+        EmojiSymbols,
+        -apple-system,
+        system-ui,
+        'Segoe UI',
+        Roboto,
+        'Helvetica Neue',
+        'Noto Sans',
+        sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
